# Reptoads

./: jenkins_build.bat  p4ignore.txt  readme.txt
Engine/: CMakeLists.txt  TBSG.sln
Engine/DatabaseAPI/: CMakeLists.txt  DatabaseAPI.props  DatabaseAPI.vcxproj
Engine/GameServer/: CMakeLists.txt  GameServer.vcxproj  GameServer.vcxproj.filters  Server.props  ServerDebug.props
Engine/GameServer/include/: GameServer.h  RTSARG.h
Engine/GameServer/include/gameplay/: DataStructs.h  MatchHelper.h
Engine/GameServer/include/model/: AISystem.h  GameLogic.h
Engine/GameServer/include/scripting/: LuaBindingFunc.h
Engine/GameServer/source/: GameServer.cpp  main.cpp
Engine/GameServer/source/gameplay/: MatchHelper.cpp
Engine/GameServer/source/model/: AISystem.cpp  GameLogic.cpp
Engine/GameServer/source/scripting/: LuaBindingFunc.cpp
Engine/GameServer/source/utils/: CMDInput.cpp
Engine/GameServer/test/source/: LuaScriptTester.cpp  memTest.cpp
Engine/LobbyServer/: CMakeLists.txt  LobbyServer.props  LobbyServer.vcxproj
Engine/LobbyServer/include/: LobbyServer.h
Engine/LobbyServer/source/: LobbyServer.cpp
Engine/NetworkLib/: CMakeLists.txt  NetworkLib.vcxproj  NetworkLib.vcxproj.backup  NetworkLib.vcxproj.filters  NetworkLibWindows.props  NetworkLibWindowsDebug.props
Engine/NetworkLib/include/Net/: Packet.h
Engine/NetworkLib/source/Crypto/: NetAESPs4.cpp  NetRSAPs4.cpp
Engine/NetworkLib/source/Net/ps4/: PS4Packet.cpp
Engine/TBSG/: TBSG.APS  TBSG.vcxproj  TBSG.vcxproj.backup  TBSG.vcxproj.filters
Engine/TBSG/include/: ClientApplication.h  DataStructs.h  EffectChangeHandler.h  Game.h  GameClient.h  GameDatabase.h  LobbyClient.h  SceneHandler.h  UserInterface.h
Engine/TBSG/include/gameplay/: WaypointSystem.h
Engine/TBSG/include/ui/: LobbyUI.h
Engine/TBSG/include/utils/: EventQueues.h  GameDataLoader.h  GameTimer.h
Engine/TBSG/src/: ClientApplication.cpp  EffectChangeHandler.cpp  Game.cpp  GameClient.cpp  LobbyClient.cpp  SceneHandler.cpp  UserInterface.cpp  main.cpp
Engine/TBSG/src/gameplay/: WaypointSystem.cpp
Engine/TBSG/src/ui/: LobbyUI.cpp
Engine/TBSG/src/utils/: EncryptUtils.cpp  GameDataLoader.cpp  LoginHandler.cpp  RegsiterHandler.cpp
Engine/TBSGFramework/: CMakeLists.txt  TBSGFramework.vcxproj  TBSGFramework.vcxproj.backup  TBSGFramework.vcxproj.filters
Engine/TBSGFramework/data/Shaders/HLSL/: GenerateMips_CS.hlsl
Engine/TBSGFramework/extras/: General Debug.props  General.props  TBSG Dependencies Debug.props  TBSG Dependencies.props  TBSG PS Dependencies Debug.props  TBSG PS Dependencies.props  TBSG WINDOWS Dependencies Debug.props  TBSG WINDOWS Dependencies.props
Engine/TBSGFramework/include/: IApplication.h  resource.h
Engine/TBSGFramework/include/core/: Assertion.h  ConceptCompatibility.h  Config.h  Defines.h  DeltaTime.h  HashCombine.h  Input.h  LibLoading.h  RefCounted.h  Tree.h
Engine/TBSGFramework/include/core/meta/: LobbyEntity.h
Engine/TBSGFramework/include/gameplay/: GamePlayHelper.h  Transform.h
Engine/TBSGFramework/include/gameplay/scripting/: LuaContext.h
Engine/TBSGFramework/include/net/: GameCommands.h  LobbyCommands.h  WebRequestPS4.h
Engine/TBSGFramework/include/rendering/: Camera.h  IDebugRenderer.h  IParticleRenderer.h  IRenderer.h  IResourceManager.h  IUIRenderer.h  Lights.h  Material.h  Mesh.h  ParticleEmitter.h  RenderPass.h  Renderable.h  ResourceIds.h  Shader.h  Texture.h
Engine/TBSGFramework/include/rendering/dx/: Buffer.h  ByteAddressBuffer.h  CommandList.h  CommandQueue.h  ConstantBuffer.h  DX12Application.h  DX12DebugRenderer.h  DX12LibPCH.h  DX12Material.h  DX12Mesh.h  DX12Renderer.h  DX12ResourceManager.h  DX12TextRenderer.h  DX12UIPanelRenderer.h  DX12UIRenderer.h  DX12_Lights.h  Defines.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  DirectXShapeMesh.h  DynamicDescriptorHeap.h  GenerateMipsPSO.h  Helpers.h  IndexBuffer.h  PanoToCubemapPSO.h  RenderTarget.h  Resource.h  ResourceStateTracker.h  RootSignature.h  StructuredBuffer.h  Texture.h  UploadBuffer.h  VertexBuffer.h  Window.h
Engine/TBSGFramework/include/rendering/gnm/: ClassID.h  Frame.h  GenericMultiMap.h  PS4DebugRenderer.h  PS4Helpers.h  PS4Material.h  PS4Mesh.h  PS4ParticleRenderer.h  PS4RenderPass.h  PS4Renderable.h  PS4Renderer.h  PS4Resource.h  PS4ResourceManager.h  PS4Shaders.h  PS4TextRenderer.h  PS4Texture.h  PS4UIRenderer.h  SimpleVertex.h  (+2 more)
Engine/TBSGFramework/include/resource_loading/: ArgumentParsing.h  GLTFLoader.h  TtfHeaderParser.h
Engine/TBSGFramework/include/scene/: SceneGraph.h
Engine/TBSGFramework/include/ui/: easing.h
Engine/TBSGFramework/src/: IApplication.cpp  initial.cpp
Engine/TBSGFramework/src/core/: DeltaTime.cpp  Input.cpp  StrHash.cpp
Engine/TBSGFramework/src/gameplay/: GamePlayHelper.cpp
Engine/TBSGFramework/src/net/: WebRequestPC.cpp  WebRequestPS4.cpp
Engine/TBSGFramework/src/rendering/: Camera.cpp  GeometricShapes.cpp  IParticleRenderer.cpp  IUIRenderer.cpp
Engine/TBSGFramework/src/resource_loading/: ArgumentParsing.cpp  ConfigLoader.cpp  GLTFLoader.cpp  RestApiParsing.cpp  TtfHeaderParser.cpp
Engine/TBSGFramework/src/ui/: easing.cpp
Engine/Tests/: Tests.vcxproj  Tests.vcxproj.filters
Engine/Tests/include/: IndependantTinyGltfStructures.h  OriginalGltf.h  RapidJsonGltf.h
Engine/Tests/src/: GameplayHelpers.cpp  GlobalAllocatorTests.cpp  IndependantTinyGltfStructures.cpp  Networking.cpp  OriginalGltf.cpp  PS4Catch2CompileTest.cpp  RapidJsonGltf.cpp  SceneGraphTests.cpp  TinyGltfTests.cpp  main.cpp  memory.cpp
Engine/documentation/: Doxyfile  SceneManagment.md  documentationguidelines.md  groups.ini  readme.md  unittests.md
Engine/tools/: CompileShaders.bat  ConvertTextures.bat
Engine/tools/LuaValidator/: LuaValidator.vcxproj
Engine/tools/ParticleEditor/: ParticleEditor.vcxproj
Engine/tools/ViewerApplication/: ViewerApplication.vcxproj  ViewerApplication.vcxproj.filters
Engine/tools/ViewerApplication/include/: ViewerApplication.h
Engine/tools/ViewerApplication/src/: ViewerApplication.cpp  main.cpp  user_malloc.cpp  user_new.cpp
(+224 files in other folders)
